传感器修复
